<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.sonatype.oss</groupId>
        <artifactId>oss-parent</artifactId>
        <version>9</version>
    </parent>

    <groupId>org.jeasy</groupId>
    <artifactId>easy-random</artifactId>
    <version>6.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Easy Random</name>
    <description>Easy Random is a library to generate random Java objects</description>
    <url>https://github.com/j-easy/easy-random</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>17</java.version>
        <junit.version>5.9.3</junit.version>
        <datafaker.version>2.0.1</datafaker.version>
        <assertj.version>3.24.2</assertj.version>
        <validation-api.version>3.0.2</validation-api.version>
        <objenesis.version>3.3</objenesis.version>
        <classgraph.version>4.8.160</classgraph.version>
        <hibernate-validator.version>8.0.1.Final</hibernate-validator.version>
        <jakarta.el.version>4.0.2</jakarta.el.version>
        <mockito.version>5.4.0</mockito.version>
        <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
        <maven-release-plugin.version>3.0.1</maven-release-plugin.version>
        <spotless.version>2.43.0</spotless.version>
    </properties>

    <modules>
        <module>easy-random-core</module>
        <module>easy-random-bean-validation</module>
        <module>easy-random-randomizers</module>
    </modules>

    <scm>
        <url>git@github.com:j-easy/easy-random.git</url>
        <connection>scm:git:git@github.com:j-easy/easy-random.git</connection>
        <developerConnection>scm:git:git@github.com:j-easy/easy-random.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <ciManagement>
        <system>Github Actions</system>
        <url>https://github.com/j-easy/easy-random/actions</url>
    </ciManagement>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/j-easy/easy-random/issues</url>
    </issueManagement>

    <developers>
        <developer>
            <id>fmbenhassine</id>
            <name>Mahmoud Ben Hassine</name>
            <url>http://fmbenhassine.github.io</url>
            <email>mahmoud.benhassine@icloud.com</email>
            <roles>
                <role>Lead developer</role>
            </roles>
        </developer>
        <developer>
            <id>PascalSchumacher</id>
            <name>Pascal Schumacher</name>
            <url>https://github.com/PascalSchumacher</url>
            <roles>
                <role>Core developer</role>
            </roles>
        </developer>
    </developers>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.jeasy</groupId>
                <artifactId>easy-random-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jeasy</groupId>
                <artifactId>easy-random-randomizers</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>jakarta.validation</groupId>
                <artifactId>jakarta.validation-api</artifactId>
                <version>${validation-api.version}</version>
            </dependency>
            <dependency>
                <groupId>org.objenesis</groupId>
                <artifactId>objenesis</artifactId>
                <version>${objenesis.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.classgraph</groupId>
                <artifactId>classgraph</artifactId>
                <version>${classgraph.version}</version>
                <optional>true</optional>
            </dependency>
            <dependency>
                <groupId>org.hibernate.validator</groupId>
                <artifactId>hibernate-validator</artifactId>
                <version>${hibernate-validator.version}</version>
            </dependency>
            <dependency>
                <groupId>org.glassfish</groupId>
                <artifactId>jakarta.el</artifactId>
                <version>${jakarta.el.version}</version>
            </dependency>
            <dependency>
                <groupId>net.datafaker</groupId>
                <artifactId>datafaker</artifactId>
                <version>${datafaker.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-params</artifactId>
                <version>${junit.version}</version>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>${assertj.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${mockito.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-junit-jupiter</artifactId>
                <version>${mockito.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <verbose>true</verbose>
                        <release>${java.version}</release>
                        <showWarnings>true</showWarnings>
                        <compilerArgs>
                            <arg>-verbose</arg>
                            <arg>-Xlint:unchecked</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                    <configuration>
                        <includes>
                            <include>**/*Test*.java</include>
                        </includes>
                        <reportFormat>html</reportFormat>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>${maven-release-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>com.diffplug.spotless</groupId>
                    <artifactId>spotless-maven-plugin</artifactId>
                    <version>${spotless.version}</version>
                    <executions>
                        <execution>
                            <id>spotless-apply</id>
                            <goals>
                                <goal>apply</goal>
                            </goals>
                            <phase>process-sources</phase>
                        </execution>
                    </executions>
                    <configuration>
                        <java>
                            <googleJavaFormat>
                            </googleJavaFormat>
                        </java>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
